--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "scripts": {
     "play": "serverless invoke --function helloworld",
-    "deploy": "serverless deploy function --function helloworld"
+    "deploy:func": "serverless deploy function --function helloworld",
+    "deploy": "serverless deploy"
   }
 }
